--- a/CODE/Makefile
+++ b/CODE/Makefile
@@ -7,10 +7,13 @@ DD = -DDEBUG
 CL=-l OpenCL
 
 ifdef oop
-OO1= -fselective-scheduling2
-OO2= -ffast-math
-PP = -DPINNED
+OO1=  -fselective-scheduling2
+PP =  -DPINNED                           #Pinned memory is enabled in host code
 oop0= -DOPTIMIZED
+endif
+
+ifdef ooc                             # Enable building opencl kernel with options
+ooc0= -DOPTIONS
 endif
 
 LINKERFLAG = -lm
@@ -31,7 +34,7 @@ main: main.o
 
 main.o: main.c $(DEPS) $(PARM) 
 	@echo "Creating object.."
-	$(CC) -c -w main.c $(DD) $(PP) $(OO1) $(OO2) $(oop0) 
+	$(CC) -c -w main.c $(DD) $(PP) $(OO1) $(OO2) $(oop0) $(ooc0)
 clean:
 	@echo "Cleaning up..."
 	rm -rf main.o main output.txt
