--- a/CODE/Makefile
+++ b/CODE/Makefile
@@ -7,9 +7,8 @@ DD = -DDEBUG
 CL=-l OpenCL
 
 ifdef oop
-OO1=  -fselective-scheduling2
-PP =  -DPINNED                           #Pinned memory is enabled in host code
-oop0= -DOPTIMIZED
+OO1=  -fselective-scheduling2 -O
+PP =  -DPINNED -DOPTIMIZED          #Pinned memory is enabled in host code
 endif
 
 ifdef ooc                             # Enable building opencl kernel with options
@@ -34,7 +33,7 @@ main: main.o
 
 main.o: main.c $(DEPS) $(PARM) 
 	@echo "Creating object.."
-	$(CC) -c -w main.c $(DD) $(PP) $(OO1) $(OO2) $(oop0) $(ooc0)
+	$(CC) -c -w main.c $(DD) $(PP) $(OO1) $(ooc0)
 clean:
 	@echo "Cleaning up..."
 	rm -rf main.o main output.txt
